# SpiriConfig

./: .gitignore  NOTES-out-of-process-plugins.md  README.md  pyproject.toml  todo.md
docs/: advanced.md  api.md  appstore.md  conf.py  configuration.md  design.md  docker.md  index.md  install.md  plugins.md
examples/store/: README.md
examples/store/docs/: README.md
examples/store/esc-config/: .copier-answers.yml  .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  Makefile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
examples/store/esc-config/.devcontainer/: devcontainer.json
examples/store/esc-config/.github/workflows/: ci.yml  publish.yml
examples/store/esc-config/docs/: conf.py  configuration.md  development.md  index.md
examples/store/esc-config/scripts/: release.py
examples/store/esc-config/src/esc_config/: __init__.py  __main__.py  nicegui_app.py
examples/store/esc-config/tests/: test_nicegui.py  test_package.py
examples/store/grafana/: compose.yaml
examples/store/nextcloud/: compose.yaml
examples/store/traefik/: compose.yaml
examples/store/whoami/: compose.yaml
scripts/: demo_target.py  test-data.sh
src/spiriconfig/: __init__.py  __main__.py  advanced.py  auth.py  cli.py  commands.py  config.py  discovery.py  logging.py  plugins.py  preferences.py  proxy.py  service.py  terminal.py  theme.py  tls.py  web.py
src/spiriconfig_appstore/: __init__.py  cli.py  config.py  credentials.py  installs.py  stores.py  web.py
src/spiriconfig_docker/: __init__.py  cli.py  config.py  env.py  settings.py  stacks.py  web.py  widgets.py
src/spiriconfig_system/: __init__.py  cli.py  config.py  system.py  web.py
src/spiriconfig_terminal/: __init__.py  cli.py  config.py  shell.py  web.py
src/spiriconfig_users/: __init__.py  cli.py  config.py  users.py  web.py
tests/: conftest.py  test_advanced.py  test_appstore.py  test_auth.py  test_cli.py  test_commands.py  test_credentials.py  test_discovery.py  test_docker_web.py  test_plugins.py  test_service.py  test_settings.py  test_stacks.py  test_system.py  test_system_web.py  test_terminal.py  test_tls.py  test_users.py  test_users_web.py  test_web.py
