[project]
name = "spiriconfig"
version = "0.1.0"
description = "Plugin-based configuration and container management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "nicegui>=3.14.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
]

[project.scripts]
spiriconfig = "spiriconfig.cli:app"

# Plugins are discovered through this entry point group. The bundled docker
# plugin registers here exactly as a third-party plugin would, so there is no
# privileged "built-in" loading path to special-case.
[project.entry-points."spiriconfig.plugins"]
docker = "spiriconfig_docker:DockerPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spiriconfig", "src/spiriconfig_docker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# NiceGUI's `user` fixture otherwise looks for a main.py to import pages from.
# We have none: pages are registered by spiriconfig.web.build(), which each test
# calls with the plugin set it wants to exercise.
main_file = ""

[dependency-groups]
dev = [
    "myst-parser>=5.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
