[project]
name = "spiriconfig"
version = "0.2.0"
description = "Plugin-based configuration and container management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "nicegui>=3.14.0",
    # The reverse proxy that fronts out-of-process (container) plugins: httpx forwards
    # HTTP, websockets carries the socket.io upgrade a live NiceGUI UI rides on. Both
    # already arrive under nicegui/uvicorn, but the proxy imports them directly, so it
    # names them rather than leaning on a transitive pin. See spiriconfig.proxy.
    "httpx>=0.27",
    "websockets>=13",
    "pamela>=1.2.0",
    "pydantic-settings>=2.14.2",
    # Pure-Python (ctypes over libpam), so it cross-compiles onto the Yocto/Debian
    # drone images with no C build step. Backs the optional PAM login (SPIRICONFIG_AUTH).
    "psutil>=6.0.0",
    # Backs the system-overview plugin: host CPU, memory, disk, and thermal sensors.
    # A C extension, unlike our other deps -- but the numbers it reads (per-core
    # times, /proc/meminfo, sysfs thermal zones) would otherwise be a pile of
    # platform-specific parsing, and prebuilt wheels cover the targets we ship on.
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
]

[project.scripts]
spiriconfig = "spiriconfig.cli:app"

# Plugins are discovered through this entry point group. The bundled docker
# plugin registers here exactly as a third-party plugin would, so there is no
# privileged "built-in" loading path to special-case.
[project.entry-points."spiriconfig.plugins"]
docker = "spiriconfig_docker:DockerPlugin"
appstore = "spiriconfig_appstore:AppStorePlugin"
terminal = "spiriconfig_terminal:TerminalPlugin"
users = "spiriconfig_users:UsersPlugin"
system = "spiriconfig_system:SystemPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/spiriconfig",
    "src/spiriconfig_docker",
    "src/spiriconfig_appstore",
    "src/spiriconfig_terminal",
    "src/spiriconfig_users",
    "src/spiriconfig_system",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# NiceGUI's `user` fixture otherwise looks for a main.py to import pages from.
# We have none: pages are registered by spiriconfig.web.build(), which each test
# calls with the plugin set it wants to exercise.
main_file = ""

[dependency-groups]
dev = [
    "myst-parser>=5.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
